AC Page working, still wont send IR signals, logging not cooperationg either

--- a/acRemote.html
+++ b/acRemote.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="format.css"/>
   </head>
   <body>
+    <div id="status"></div>
     <button onclick="sendCommand('power')">Power</button>
     <button onclick="sendCommand('up')">Up</button>
     <button onclick="sendCommand('down')">Down</button>
