AC Controls woking, added speed button to acRemote page

--- a/acRemote.html
+++ b/acRemote.html
@@ -9,6 +9,7 @@
     <button onclick="sendCommand('up')">Up</button>
     <button onclick="sendCommand('down')">Down</button>
     <button onclick="sendCommand('mode')">Mode</button>
+    <button onclick="sendCommand('s')">Speed</button>
     <button onclick="sendCommand('time')">Timer</button>
 
     <script type="text/javascript">
